# aristotle_new_orchestrator

./: .dockerignore  .env.example  .gitignore  BUILD_PROMPT.md  Dockerfile  GITHUB_DEPLOYMENT.md  RAILWAY_PROGRESS.md  README.md  docker-entrypoint.sh  pyproject.toml  railway.toml  requirements.txt
docs/: aristotle_summary_and_json.md  limacore.md
docs/research_packets/: erdos_44_packet.json
examples/: erdos_181_hypercube_ramsey.py  requirements-erdos181.txt
scripts/: migrate-railway-orchestrator-data.sh  pull-railway-export.sh  railway-migrate-db-base64.sh  railway-pull-db-from-service.sh  railway-push-db-to-service.sh  sync-railway-env.sh
src/orchestrator/: __init__.py  admin_routes.py  app.py  aristotle.py  config.py  db.py  experiment_dispatch.py  lima_agent.py  lima_db.py  lima_discovery.py  lima_literature.py  lima_meta.py  lima_models.py  lima_obligations.py  lima_presenter.py  lima_rupture.py  lima_steward.py  llm.py  manager.py  manager_policy.py  mathlib_knowledge.py  models.py  problem_map_util.py  research_packets.py  shadow_agent.py  shadow_presenter.py  (+5 more)
tests/: test_app_research_packet.py  test_app_supershadow.py  test_aristotle_submit.py  test_db_and_migration.py  test_lima_steward.py  test_lima_subsystem.py  test_lima_v15.py  test_llm.py  test_manager_policy.py  test_mathlib_knowledge.py  test_parse_experiment_result.py  test_problem_map_util.py  test_research_packets.py  test_shadow_global_agent.py  test_shadow_presenter.py  test_supershadow_agent.py  test_supershadow_presenter.py  test_verdict_reconcile.py  test_workspace_templates.py
(+74 files in other folders)
