[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aristotle-orchestrator"
version = "0.1.0"
description = "LLM-driven research orchestrator using Aristotle for discovery via formal verification"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "jinja2>=3.1.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "aristotlelib>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
orchestrator = [
  "templates/*.html",
  "templates/**/*.html",
  "lean_templates/minimal/lean-toolchain",
  "lean_templates/minimal/lakefile.lean",
  "lean_templates/minimal/OrchWorkspace/OrchWorkspace.lean",
  "lean_templates/mathlib/lean-toolchain",
  "lean_templates/mathlib/lakefile.lean",
  "lean_templates/mathlib/OrchWorkspace/OrchWorkspace.lean",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
